--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <!-- Header -->
+        <header class="header">
+            <h1>Jacob</h1>
+            <ul>
+                <li>
+                    <a href="#aboutMe">About Me</a>
+                </li>
+                <li>
+                    <a href="#work">Work</a>
+                </li>
+                <li>
+                    <a href="#contactMe">Contact Me</a>
+                </li>
+            </ul>
+        </header>
+
     </body>
 </html>
