Added front page image and styled it in CSS.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 </li>
             </ul>
         </header>
+        <!-- Front Page Image -->
+        <figure class="frontPageImage">
+            <img src="images/tengen-toppa-gurren-lagann-4k-1m.jpg" alt="">
+        </figure>
+        
 
     </body>
 </html>
