Added work section and styled in CSS.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
                 Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
-        
+        <!-- Work -->
+        <article class="work" id="#work">
+            <h2>Work</h2>
+            <a class="workExample1" href="https://jacobpudwill.github.io/01-Code-Refactor/"><img src="images/Screenshot-1.png" alt="Screenshot of SEO website."></a>
+        </article>
 
     </body>
 </html>
