--- a/index.html
+++ b/index.html
@@ -36,10 +36,25 @@
                 Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </article>
         <!-- Work -->
-        <article class="work" id="#work">
+        <article class="work" id="work">
             <h2>Work</h2>
             <a class="workExample1" href="https://jacobpudwill.github.io/01-Code-Refactor/"><img src="images/Screenshot-1.png" alt="Screenshot of SEO website."></a>
         </article>
+        <!-- Footer -->
+        <footer class="footer" id="contactMe">
+            <h2>Contact Me</h2>
+            <ul>
+                <li>
+                    <u>555.555.5555</u>
+                </li>
+                <li>
+                    <u>GitHub</u>
+                </li>
+                <li>
+                    <u>123@website.com</u>
+                </li>
+            </ul>
+        </footer>
 
     </body>
 </html>
